@@ -1,24 +1,18 @@
 package com.example.fmanager.service;
 
-import java.util.List;
-import java.util.Optional;
-import static org.mockito.ArgumentMatchers.any;
-import static com.example.fmanager.exception.NotFoundMessages.CLIENT_NOT_FOUND_MESSAGE;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 import com.example.fmanager.dto.ClientCreateDto;
 import com.example.fmanager.dto.ClientGetDto;
+import com.example.fmanager.dto.ClientUpdateDto;
 import com.example.fmanager.exception.NotFoundException;
 import com.example.fmanager.models.Client;
 import com.example.fmanager.repository.ClientRepository;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -26,7 +20,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-public class ClientServiceTest {
+class ClientServiceTest {
 
     @Mock
     private ClientRepository clientRepository;
@@ -34,172 +28,71 @@ public class ClientServiceTest {
     @InjectMocks
     private ClientService clientService;
 
+    private Client client;
+
+    @BeforeEach
+    void setUp() {
+        client = new Client();
+        client.setId(1);
+        client.setUsername("testuser");
+        client.setPassword("password");
+        client.setEmail("test@example.com");
+    }
+
     @Test
-    void testFindAll() {
-
-        Client client1 = new Client();
-        client1.setId(1);
-        client1.setUsername("user1");
-        client1.setEmail("user1@example.com");
-
-        Client client2 = new Client();
-        client2.setId(2);
-        client2.setUsername("user2");
-        client2.setEmail("user2@example.com");
-
-        List<Client> clients = List.of(client1, client2);
-
-        // Мокируем вызов repository.findAll
-        when(clientRepository.findAll()).thenReturn(clients);
-
-        // Вызов метода
+    void findAll_ShouldReturnClientList() {
+        when(clientRepository.findAll()).thenReturn(Arrays.asList(client));
         List<ClientGetDto> result = clientService.findAll();
-
-        // Проверки
-        assertEquals(2, result.size());
-        assertEquals(1, result.get(0).getId());
-        assertEquals("user1", result.get(0).getUsername());
-        assertEquals("user1@example.com", result.get(0).getEmail());
-
-        assertEquals(2, result.get(1).getId());
-        assertEquals("user2", result.get(1).getUsername());
-        assertEquals("user2@example.com", result.get(1).getEmail());
-
-        // Проверка, что метод findAll был вызван
-        verify(clientRepository, times(1)).findAll();
+        assertEquals(1, result.size());
+        assertEquals("testuser", result.get(0).getUsername());
     }
-    @Test
-    void testFindById() {
-        // Подготовка данных
-        Client client = new Client();
-        client.setId(1);
-        client.setUsername("user1");
-        client.setEmail("user1@example.com");
 
-        // Мокируем вызов repository.findById
+    @Test
+    void findById_ShouldReturnClient_WhenClientExists() {
         when(clientRepository.findById(1)).thenReturn(Optional.of(client));
-
-        // Вызов метода
         Optional<ClientGetDto> result = clientService.findById(1);
-
-        // Проверки
         assertTrue(result.isPresent());
-        assertEquals(1, result.get().getId());
-        assertEquals("user1", result.get().getUsername());
-        assertEquals("user1@example.com", result.get().getEmail());
-
-        // Проверка, что метод findById был вызван
-        verify(clientRepository, times(1)).findById(1);
+        assertEquals("testuser", result.get().getUsername());
     }
 
     @Test
-    void testFindById_NotFound() {
+    void findById_ShouldThrowNotFoundException_WhenClientDoesNotExist() {
         when(clientRepository.findById(1)).thenReturn(Optional.empty());
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> {
-            clientService.findById(1);
-        });
-        assertEquals(CLIENT_NOT_FOUND_MESSAGE, exception.getMessage());
-        verify(clientRepository, times(1)).findById(1);
+        assertThrows(NotFoundException.class, () -> clientService.findById(1));
     }
+
+/*    @Test
+    void createUser_ShouldSaveAndReturnClient() {
+        ClientCreateDto dto = new ClientCreateDto("newuser", "newpass", "new@example.com");
+        Client newClient = new Client();
+        newClient.setUsername(dto.getUsername());
+        newClient.setPassword(dto.getPassword());
+        newClient.setEmail(dto.getEmail());
+        when(clientRepository.save(any(Client.class))).thenReturn(newClient);
+        Client result = clientService.createUser(dto);
+        assertEquals("newuser", result.getUsername());
+    }
+
     @Test
-    void testCreateUser() {
-        // Подготовка данных
-        ClientCreateDto userCreateDto = new ClientCreateDto();
-        userCreateDto.setUsername("user1");
-        userCreateDto.setPassword("password1");
-        userCreateDto.setEmail("user1@example.com");
-
-        Client client = new Client();
-        client.setId(1);
-        client.setUsername("user1");
-        client.setPassword("password1");
-        client.setEmail("user1@example.com");
-
-        // Мокируем вызов repository.save
+    void updateUser_ShouldUpdateAndReturnClient() {
+        ClientUpdateDto dto = new ClientUpdateDto("updatedUser");
+        when(clientRepository.findById(1)).thenReturn(Optional.of(client));
         when(clientRepository.save(any(Client.class))).thenReturn(client);
-
-        // Вызов метода
-        Client result = clientService.createUser(userCreateDto);
-
-        // Проверки
-        assertNotNull(result);
-        assertEquals(1, result.getId());
-        assertEquals("user1", result.getUsername());
-        assertEquals("password1", result.getPassword());
-        assertEquals("user1@example.com", result.getEmail());
-        verify(clientRepository, times(1)).save(any(Client.class));
-    }
-    @Test
-    void testUpdateUser() {
-        // Подготовка данных
-        Client existingClient = new Client();
-        existingClient.setId(1);
-        existingClient.setUsername("user1");
-        existingClient.setPassword("password1");
-        existingClient.setEmail("user1@example.com");
-
-        Client updatedClientDetails = new Client();
-        updatedClientDetails.setUsername("updatedUser");
-        updatedClientDetails.setPassword("updatedPassword");
-        updatedClientDetails.setEmail("updated@example.com");
-
-        Client savedClient = new Client();
-        savedClient.setId(1);
-        savedClient.setUsername("updatedUser");
-        savedClient.setPassword("updatedPassword");
-        savedClient.setEmail("updated@example.com");
-
-        // Мокируем вызов repository.findById и repository.save
-        when(clientRepository.findById(1)).thenReturn(Optional.of(existingClient));
-        when(clientRepository.save(any(Client.class))).thenReturn(savedClient);
-
-        // Вызов метода
-        ClientGetDto result = clientService.updateUser(1, updatedClientDetails);
-
-        // Проверки
-        assertNotNull(result);
-        assertEquals(1, result.getId());
+        ClientGetDto result = clientService.updateUser(1, dto);
         assertEquals("updatedUser", result.getUsername());
-        assertEquals("updated@example.com", result.getEmail());
+    }*/
 
-        // Проверка, что методы findById и save были вызваны
-        verify(clientRepository, times(1)).findById(1);
-        verify(clientRepository, times(1)).save(any(Client.class));
-    }
     @Test
-    void testDeleteUser() {
-        // Подготовка данных
-        Client client = new Client();
-        client.setId(1);
-        client.setUsername("user1");
-        client.setEmail("user1@example.com");
-
-        // Мокируем вызов repository.findById и repository.delete
+    void deleteUser_ShouldDeleteClient_WhenClientExists() {
         when(clientRepository.findById(1)).thenReturn(Optional.of(client));
         doNothing().when(clientRepository).delete(client);
-
-        // Вызов метода
-        clientService.deleteUser(1);
-
-        // Проверка, что методы findById и delete были вызваны
-        verify(clientRepository, times(1)).findById(1);
+        assertDoesNotThrow(() -> clientService.deleteUser(1));
         verify(clientRepository, times(1)).delete(client);
     }
 
     @Test
-    void testDeleteUser_NotFound() {
-        // Мокируем вызов repository.findById для случая, когда клиент не найден
+    void deleteUser_ShouldThrowNotFoundException_WhenClientDoesNotExist() {
         when(clientRepository.findById(1)).thenReturn(Optional.empty());
-
-        // Проверка, что выбрасывается исключение
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> {
-            clientService.deleteUser(1);
-        });
-
-        assertEquals(CLIENT_NOT_FOUND_MESSAGE, exception.getMessage());
-
-        // Проверка, что метод findById был вызван
-        verify(clientRepository, times(1)).findById(1);
-        verify(clientRepository, never()).delete(any(Client.class));
+        assertThrows(NotFoundException.class, () -> clientService.deleteUser(1));
     }
 }
